--- a/Trainer/Trainer/Trainer.vcxproj
+++ b/Trainer/Trainer/Trainer.vcxproj
@@ -154,8 +154,8 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Base.cpp" />
     <ClCompile Include="Framework.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GeometryManager.cpp" />
-    <ClCompile Include="ModelObject.cpp" />
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Timer.cpp" />
@@ -166,8 +166,8 @@
     <ClInclude Include="Base.h" />
     <ClInclude Include="Compile.h" />
     <ClInclude Include="Framework.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="GeometryManager.h" />
-    <ClInclude Include="ModelObject.h" />
     <ClInclude Include="PipelineDefinitions.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Timer.h" />
