Trash commit, will revert

--- a/Trainer/Trainer/Trainer.vcxproj.filters
+++ b/Trainer/Trainer/Trainer.vcxproj.filters
@@ -80,5 +80,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="DirectionalLight.shader" />
+    <None Include="PointLight.shader" />
   </ItemGroup>
 </Project>
