--- a/Trainer/Trainer/Trainer.vcxproj
+++ b/Trainer/Trainer/Trainer.vcxproj
@@ -176,6 +176,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="DirectionalLight.shader" />
+    <None Include="PointLight.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
