--- a/Trainer/Trainer/Trainer.vcxproj
+++ b/Trainer/Trainer/Trainer.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="Base.cpp" />
     <ClCompile Include="Framework.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="PetSkeleton.cpp" />
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Timer.cpp" />
@@ -169,6 +170,7 @@
     <ClInclude Include="Framework.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GeometryManager.h" />
+    <ClInclude Include="PetSkeleton.h" />
     <ClInclude Include="PipelineDefinitions.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Timer.h" />
@@ -177,6 +179,7 @@
   <ItemGroup>
     <None Include="DirectionalLight.shader" />
     <None Include="PointLight.shader" />
+    <None Include="ShapeSlider.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
