--- a/Trainer/Trainer/Trainer.vcxproj
+++ b/Trainer/Trainer/Trainer.vcxproj
@@ -153,39 +153,37 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
-    <ClCompile Include="Base.cpp" />
-    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="BaseObject.cpp" />
+    <ClCompile Include="CameraObject.cpp" />
     <ClCompile Include="KeyboardControls.cpp" />
-    <ClCompile Include="Mouse.cpp" />
+    <ClCompile Include="MouseObject.cpp" />
     <ClCompile Include="Pipeline.cpp" />
     <ClCompile Include="Framework.cpp" />
     <ClCompile Include="GameObject.cpp" />
-    <ClCompile Include="PetSkeleton.cpp" />
     <ClCompile Include="Program.cpp" />
-    <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="ShaderObject.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Vertex.cpp" />
-    <ClCompile Include="Window.cpp" />
+    <ClCompile Include="WindowObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="ApplicationDefinitions.h" />
     <ClInclude Include="KeyboardControls.h" />
-    <ClInclude Include="Mouse.h" />
+    <ClInclude Include="MouseObject.h" />
     <ClInclude Include="WindowDefinitions.h" />
-    <ClInclude Include="Base.h" />
-    <ClInclude Include="Camera.h" />
+    <ClInclude Include="BaseObject.h" />
+    <ClInclude Include="CameraObject.h" />
     <ClInclude Include="Compile.h" />
     <ClInclude Include="Pipeline.h" />
     <ClInclude Include="Framework.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GeometryManager.h" />
-    <ClInclude Include="PetSkeleton.h" />
     <ClInclude Include="PipelineDefinitions.h" />
-    <ClInclude Include="Shader.h" />
+    <ClInclude Include="ShaderObject.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Vertex.h" />
-    <ClInclude Include="Window.h" />
+    <ClInclude Include="WindowObject.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="DirectionalLight.shader" />
