--- a/Trainer/Trainer/Trainer.vcxproj
+++ b/Trainer/Trainer/Trainer.vcxproj
@@ -157,12 +157,12 @@
     <ClCompile Include="CameraObject.cpp" />
     <ClCompile Include="KeyboardControls.cpp" />
     <ClCompile Include="MouseObject.cpp" />
-    <ClCompile Include="Pipeline.cpp" />
+    <ClCompile Include="PipelineObject.cpp" />
     <ClCompile Include="Framework.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="ShaderObject.cpp" />
-    <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="TimerObject.cpp" />
     <ClCompile Include="Vertex.cpp" />
     <ClCompile Include="WindowObject.cpp" />
   </ItemGroup>
@@ -175,13 +175,13 @@
     <ClInclude Include="BaseObject.h" />
     <ClInclude Include="CameraObject.h" />
     <ClInclude Include="Compile.h" />
-    <ClInclude Include="Pipeline.h" />
+    <ClInclude Include="PipelineObject.h" />
     <ClInclude Include="Framework.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GeometryManager.h" />
     <ClInclude Include="PipelineDefinitions.h" />
     <ClInclude Include="ShaderObject.h" />
-    <ClInclude Include="Timer.h" />
+    <ClInclude Include="TimerObject.h" />
     <ClInclude Include="Vertex.h" />
     <ClInclude Include="WindowObject.h" />
   </ItemGroup>
