--- a/Trainer/Trainer/Trainer.vcxproj
+++ b/Trainer/Trainer/Trainer.vcxproj
@@ -155,14 +155,15 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="BaseObject.cpp" />
     <ClCompile Include="CameraObject.cpp" />
-    <ClCompile Include="KeyboardState.cpp" />
+    <ClCompile Include="KeyboardObject.cpp" />
     <ClCompile Include="MouseObject.cpp" />
-    <ClCompile Include="Notes.cpp" />
     <ClCompile Include="PipelineObject.cpp" />
     <ClCompile Include="Framework.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="ShaderObject.cpp" />
+    <ClCompile Include="StandardKeyboard.cpp" />
+    <ClCompile Include="StandardMouse.cpp" />
     <ClCompile Include="TimerObject.cpp" />
     <ClCompile Include="Vertex.cpp" />
     <ClCompile Include="WindowObject.cpp" />
@@ -170,8 +171,10 @@
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="ApplicationDefinitions.h" />
-    <ClInclude Include="KeyboardState.h" />
+    <ClInclude Include="KeyboardObject.h" />
     <ClInclude Include="MouseObject.h" />
+    <ClInclude Include="StandardKeyboard.h" />
+    <ClInclude Include="StandardMouse.h" />
     <ClInclude Include="WindowDefinitions.h" />
     <ClInclude Include="BaseObject.h" />
     <ClInclude Include="CameraObject.h" />
@@ -190,6 +193,9 @@
     <None Include="DirectionalLight.shader" />
     <None Include="PointLight.shader" />
     <None Include="ShapeSlider.shader" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Notes.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
